crud admin 페이지 작업~

--- a/src/main/resources/templates/admin/viewPlace.html
+++ b/src/main/resources/templates/admin/viewPlace.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>박물관 정보</h1>
+    <h1>박물관 정보dd dd 바뀌냥 hello ff ff fffff 진짜앙  ggg 최고당~~</h1>
     <hr/>
     <div class="row">
         <table id="placeTable" class="table table-striped table-bordered" cellspacing="0" >
