--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,59 +1,17 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns= "http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="admin/mainLayout">
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/dist/css/bootstrap.min.css}" />
 </head>
 <body>
-<div class="page-header">
-    <h1>Buttons</h1>
+
+<div layout:fragment="content">
+    sfsfs
 </div>
-<p>
-    <button type="button" class="btn btn-lg btn-default">Default</button>
-    <button type="button" class="btn btn-lg btn-primary">Primary</button>
-    <button type="button" class="btn btn-lg btn-success">Success</button>
-    <button type="button" class="btn btn-lg btn-info">Info</button>
-    <button type="button" class="btn btn-lg btn-warning">Warning</button>
-    <button type="button" class="btn btn-lg btn-danger">Danger</button>
-    <button type="button" class="btn btn-lg btn-link">Link</button>
-</p>
-<p>
-    <button type="button" class="btn btn-default">Default</button>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-info">Info</button>
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-link">Link</button>
-</p>
-<p>
-    <button type="button" class="btn btn-sm btn-default">Default</button>
-    <button type="button" class="btn btn-sm btn-primary">Primary</button>
-    <button type="button" class="btn btn-sm btn-success">Success</button>
-    <button type="button" class="btn btn-sm btn-info">Info</button>
-    <button type="button" class="btn btn-sm btn-warning">Warning</button>
-    <button type="button" class="btn btn-sm btn-danger">Danger</button>
-    <button type="button" class="btn btn-sm btn-link">Link</button>
-</p>
-<p>
-    <span class="glyphicon glyphicon-duplicate"><button type="button" class="btn btn-xs btn-default">Default</button></span>
-    <button type="button" class="btn btn-xs btn-primary">Primary</button>
-    <button type="button" class="btn btn-xs btn-success">Success</button>
-    <button type="button" class="btn btn-xs btn-info">Info</button>
-    <button type="button" class="btn btn-xs btn-warning">Warning</button>
-    <button type="button" class="btn btn-xs btn-danger">Danger</button>
-    <button type="button" class="btn btn-xs btn-link">Link</button>
-</p>
 
-<script th:src="@{/webjars/jquery/3.1.1/jquery.js}"></script>
-<script th:src="@{/webjars/bootstrap/3.3.7/dist/js/bootstrap.js}"></script>
-
-<script>
-    $( document ).ready(function() {
-        // Handler for .ready() called.
-        alert("페이지 띄었당~~");
-    });
-</script>
 </body>
 </html>
