--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Header</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
-</body>
+<header th:fragment="headerFragment">
+    헤더 영역입니다.
+</header>
+
 </html>
