--- a/src/main/resources/templates/admin/mainLayout.html
+++ b/src/main/resources/templates/admin/mainLayout.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/dist/css/bootstrap.min.css}" />
 </head>
 <body>
+<header th:replace="admin/fragments/header :: headerFragment"></header>
 
 <div layout:fragment="content"></div>
 
+<footer th:replace="admin/fragments/footer:: footerFragment"></footer>
 
 <script th:src="@{/webjars/jquery/3.1.1/jquery.js}"></script>
 <script th:src="@{/webjars/bootstrap/3.3.7/dist/js/bootstrap.js}"></script>
